--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <title>Meal Finder</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-5">
         <h1>Meal Finder</h1>
         <div class="flex">
           <form class="flex" id="submit">
