--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container mt-5">
-        <h1>Meal Finder</h1>
+        <h1><span>C M</span> Meal Finder</h1>
         <div class="flex">
           <form class="flex" id="submit">
             <input
